--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vite preview",
+    "build": "vite build",
+    "dev": "vite",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^1.6.2",
     "core-js": "^3.6.5",
+    "sass": "^1.39.0",
+    "vite": "^2.5.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
