--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wo-terminal",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vite preview",
     "build": "vite build",
@@ -31,6 +31,10 @@
     "prettier": "^2.2.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WizarDRW/wo-terminal.git"
   },
   "eslintConfig": {
     "root": true,
