--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wo-terminal",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.0",
   "private": false,
   "scripts": {
     "serve": "vite preview",
